# TrashBin-

./: .gitignore  README.md  analyze_balance.py  config.yaml  package.json  requirements.txt  train_optimized.py  verify_setup.py
app/: globals.css
backend/: .env.example  .gitignore  inspect_checkpoint.py  pyproject.toml  requirements.txt  test_camera_standalone.py  test_feedback_crowdsource.py  test_low_light.py  test_realtime_camera.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  admin.py  classify.py  crowdsource.py  feedback.py  health.py  locations.py  realtime.py  statistics.py
backend/app/core/: config.py  database.py  model_loader.py
backend/app/models/: __init__.py  classification.py  crowdsource.py  feedback.py  location.py
backend/app/services/: motion_detection.py  result_smoothing.py  statistics.py
backend/app/utils/: __init__.py  bin_mapping.py  image_preprocessing.py  recycling_tips.py
components/: classification-feedback.tsx  classification-result.tsx  footer.tsx  theme-provider.tsx
frontend/: README.md  package-lock.json  tsconfig.tsbuildinfo
lib/: cameraUtils.ts  disposalInstructions.ts
notebooks/: 04_train_baseline_cnn.ipynb  05_train_efficientnet.ipynb  05_train_efficientnet_pytorch.ipynb  YOLO_Training_Production.ipynb
outputs/: baseline_training_results.json
scripts/: download_models.py  switch_model.py  test_advanced_safeguards.py  test_heuristics.py  test_heuristics_v2.py  yolo_eda.py
src/: augmentation_pipeline.py  compute_class_weights.py  config.py  data_generators.py  manual_download_organizer.py  (+3 more)
(+39 files in other folders)
