[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greensort-backend"
version = "1.0.0"
description = "GreenSort Waste Classification Backend"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["app"]

[tool.pylance]
include = ["app"]